src/components/Contact/contact.css
.body {
    background-image: url(../../assets/morocco.png);
}

.box {
    min-height: 400px;
    border: 2px solid #dddddd;
    padding: 30px;
    background-color: #ffffff;
    color: #777777;
    margin: auto;
    margin-top: 75px; 
    margin-bottom: 75px;
}

div.card-body {
    padding: 0;
}

/* Header for each page */

.boxheader {
    border-bottom: 2px solid #cccccc;
    margin-bottom: 30px;
}

h2 {
    color: #4aaaa5;
    margin-top: 0px;
    margin-bottom: 30px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 24px;
}

/* Contact Me */

.btn {
    background-color: #4aaaa5;
}

